styles.css
html {
  background: url(eugene-deshko-ic_ED5M5evg-unsplash.jpg) no-repeat center
    center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}
body {
  background-color: transparent !important;
  font-family: "Quicksand", sans-serif;
}
.container {
  margin: 30px auto;
  width: 70%;
  background: rgba(255, 255, 255, 0.4);
  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.25);
  backdrop-filter: blur(4px);
  -webkit-backdrop-filter: blur(4px);
  border-radius: 20px;
  border: 1px solid rgba(255, 255, 255, 0.18);
  color: #35283a;
}

.card {
  margin: 50px auto;
  width: 90%;
  background-color: transparent !important;
  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.25);
  border-radius: 10px;
  border: 1px solid rgba(255, 255, 255, 0.18);
}
.form-inline {
  margin: 0 auto;
}
.card-title {
  text-align: left;
}
.card-text {
  text-align: left;
  text-transform: capitalize;
  background-color: transparent !important;
}
.card-header {
  border-bottom: none;
}
.nav {
  background-color: transparent !important;
}
.navbar {
  background-color: transparent !important;
  padding: 8px 16px 32px 16px;
}
.nav-tabs .nav-link {
  border: none;
}
.nav-tabs .nav-link .active {
  color: #35283a;
  background: rgba(255, 255, 255, 0.2);
  border: none;
}
a {
  color: #35283a;
}
a:hover {
  color: #35283a;
}
.bg-light {
  background-color: transparent !important;
}
.form-control {
  background: rgba(255, 255, 255, 0.1);
  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.25);
  backdrop-filter: blur(4px);
  -webkit-backdrop-filter: blur(4px);
  border-radius: 10px;
  border: 1px solid rgba(255, 255, 255, 0.18);
}
button {
  margin-right: 2px;
}
.btn-outline-success {
  color: white;

  background: rgba(59, 24, 71, 0.4);
  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.25);
  backdrop-filter: blur(4px);
  -webkit-backdrop-filter: blur(4px);
  border-radius: 40px;
  border: 1px solid rgba(255, 255, 255, 0.18);
}
.btn-outline-success:hover {
  cursor: pointer;
  color: #35283a;
  background: rgba(59, 24, 71, 0.5);
  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.4);
  border: 1px solid rgba(255, 255, 255, 0.18);
}
.btn-outline-success:focus {
  box-shadow: 0 0 0 0.2rem rgba(31, 38, 135, 0.5);
}
.btn-outline-success:not(:disabled):not(.disabled).active:focus,
.btn-outline-success:not(:disabled):not(.disabled):active:focus,
.show > .btn-outline-success.dropdown-toggle:focus {
  box-shadow: 0 0 0 0.2rem rgba(31, 38, 135, 0.5);
}

.btn-outline-success:not(:disabled):not(.disabled).active,
.btn-outline-success:not(:disabled):not(.disabled):active,
.show > .btn-outline-success.dropdown-toggle {
  color: #fff;
  background-color: #35283a;
  border-color: #35283a;
}
p {
  line-height: 5px;
}

h1,
h2 {
  font-size: 50px;
}
.weather-icon {
  float: right;
  margin: 0;
  padding: 0;
  width: 50px;
  height: 50px;
}
.aligned {
  display: flex;

  align-items: center;
  justify-content: center;
  flex-wrap: nowrap;
}
.aligned .active {
  cursor: default;
  color: #35283a;
  background: rgba(255, 255, 255, 0.4);
  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.25);
  border: 1px solid rgba(255, 255, 255, 0.18);
  padding: 2px;
  border-radius: 15%;
}
.aligned .active:hover {
  text-decoration: none;
}
.units {
  position: relative;
  font-size: 16px;
  top: -16px;
}

.weather-forecast {
  margin-top: 20px;
}

.source-link {
  font-weight: bold;
  color: white;
}
.source-link a {
  color: white;
}
ul {
  list-style-type: none;
}
li {
  text-transform: capitalize;
}
.theme-button {
  font-size: 20px;
  display: block;
  margin: 20px auto 0;

  border: transparent;
  background: transparent;
  color: white;
}
i {
  color: white;
}
.theme-button i:hover {
  color: rgba(255, 255, 255, 0.4);

  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.25);
  background: transparent;
  cursor: pointer;
}
.row {
  display: flex;
}
.col-2 {
  flex-wrap: wrap;
}
.weather-forecast-day {
  display: flex;
}
.weather-forecast-temperatures {
  display: flex;
}
.weather-forecast-img {
  display: flex;
}

.dark {
  background: url(dieter-wolf-3-EZ8eQ-1bk-unsplash.jpg) no-repeat center center
    fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}
.dark .container {
  margin: 100px auto;
  width: 70%;
  background: rgba(8, 8, 8, 0.5);
  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
  backdrop-filter: blur(4px);
  -webkit-backdrop-filter: blur(4px);
  border-radius: 10px;
  border: 1px solid rgba(255, 255, 255, 0.18);
  color: #e6e6e6;
}
.dark .card {
  margin: 50px auto;
  width: 90%;
  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
  backdrop-filter: blur(4px);
  -webkit-backdrop-filter: blur(4px);
  border-radius: 10px;
  border: 1px solid rgba(255, 255, 255, 0.18);
}

.dark .units {
  position: relative;
  font-size: 16px;
  top: -16px;
  color: white;
}
.dark .aligned .active {
  cursor: default;
  color: #fdfdfd;
  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
  backdrop-filter: blur(4px);
  -webkit-backdrop-filter: blur(4px);
  border-radius: 15%;
  border: 1px solid rgba(255, 255, 255, 0.18);
  padding: 2px;
}
.dark a {
  color: #9c78aa;
}
.dark a:hover {
  color: #9c78aa;
}

